--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -4,7 +4,7 @@
 
 name: Code Quality Checks
 
-on: # yamlint disable-line rule:truthy
+on: # # yamlint disable-line rule:truthy
   push:
     branches:
       - main
@@ -36,7 +36,8 @@ on: # yamlint disable-line rule:truthy
   workflow_dispatch:
 
 permissions:
-  contents: read
+  contents: write
+  pull-requests: write
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -54,7 +55,6 @@ jobs:
 
     outputs:
       files-changed: ${{ steps.check.outputs.files-changed }}
-      fixes-applied: ${{ steps.check.outputs.fixes-applied }}
 
     steps:
       - name: 🔒 Harden Runner
@@ -76,7 +76,7 @@ jobs:
           check-latest: true
 
       - name: 📦 Setup Cache
-        uses: actions/cache@1bd1e32a3bdc45362d1e726936510720a7c30a57 # v4.2.0
+        uses: actions/cache@v4.2.0
         with:
           path: |
             ~/.cache/pre-commit
@@ -84,6 +84,7 @@ jobs:
           key: ${{ runner.os }}-precommit-${{ hashFiles('.pre-commit-config.yaml') }}
           restore-keys: |
             ${{ runner.os }}-precommit-
+            ${{ runner.os }}-
 
       - name: 🛠️ Install Dependencies
         run: |
@@ -95,7 +96,7 @@ jobs:
         id: check
         run: |
           # Run pre-commit
-          pre-commit run --all-files --show-diff-on-failure
+          pre-commit run --all-files --show-diff-on-failure | tee .pre-commit-output.txt
 
           # Check for changes
           if [ -n "$(git status --porcelain)" ]; then
@@ -123,17 +124,17 @@ jobs:
           fi
 
           if [ "${{ steps.check.outputs.files-changed }}" == "true" ]; then
-              {
-                echo "### 📝 Required Changes"
-                echo "\`\`\`diff"
-                git diff
-                echo "\`\`\`"
-              } >> quality_report.md
+            {
+              echo "### 📝 Required Changes"
+              echo "\`\`\`diff"
+              git diff
+              echo "\`\`\`"
+            } >> quality_report.md
           fi
 
       - name: 🔄 Create Fix PR
-        if: steps.check.outputs.files-changed == 'true'
-        uses: peter-evans/create-pull-request@153407881ec5c347639a548ade7d8ad1d6740e38 # v5.0.2
+        if: steps.check.outputs.files-changed == 'true' && github.event_name == 'push'
+        uses: peter-evans/create-pull-request@c5a7806660adbe173f04e3e038b0ccdcd758773c  #v5.0.2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: 'style: apply automatic code quality fixes'
@@ -157,13 +158,13 @@ jobs:
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: context.issue.number,
+              issue_number: context.payload.pull_request.number,
               body: report
             });
 
       - name: 📤 Upload Results
         if: always()
-        uses: actions/upload-artifact@0b2256b8c012f0828dc542b3febcab082c67f72b # v4.3.4
+        uses: actions/upload-artifact@v4.3.4
         with:
           name: code-quality-results
           path: |
@@ -173,9 +174,7 @@ jobs:
 
   notify:
     needs: pre-commit
-    if: |
-      always() &&
-      needs.pre-commit.outputs.files-changed == 'true'
+    if: always() && needs.pre-commit.outputs.files-changed == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: 📢 Notify Team
