--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,9 +55,9 @@ test:
   stage: test
   parallel:
     matrix:
-      - PYTHON_VERSION: ['3.9', '3.10', '3.11']
+      - PYTHON_VERSION: ["3.9", "3.10", "3.11"]
   image: python:$PYTHON_VERSION-slim
-  coverage: '/TOTAL.+ ([0-9]{1,3}%)/'
+  coverage: "/TOTAL.+ ([0-9]{1,3}%)/"
   script:
     - hatch run test:cov
   artifacts:
