--- a/.github/workflows/dependabot-merge.yml
+++ b/.github/workflows/dependabot-merge.yml
@@ -91,8 +91,8 @@ jobs:
               }
 
               // Ensure pull_request exists in the context payload
-              const pullRequest = context.payload.pull_request;
-              if (!pullRequest) {
+              const pull request = context.payload.pull_request;
+              if (!pull request) {
                 throw new Error('This workflow must be triggered by a pull request event.');
               }
 
@@ -100,7 +100,7 @@ jobs:
               await github.rest.issues.addLabels({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                issue_number: pullRequest.number,
+                issue_number: pull request.number,
                 labels: labels
               });
 
