--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,17 +2,20 @@
 # SPDX-FileCopyRightText: 2023-2024 Jürgen Mülbert <juergen.muelbert@outlook.de>
 #
 # SPDX-License-Identifier: EUPL-1.2
+# yaml-lint: ignore line-length
+# yaml-language-server: schema=https://json.schemastore.org/mkdocs-1.6.json
+# $schema=https://json.schemastore.org/mkdocs-1.6.json
 #
-# yaml-language-server: $schema=https://json.schemastore.org/mkdocs-1.6.json
-#
+
+# Remove duplicate schema declaration
 site_name: JM BDE
-site_url: https://io.github.org/jmuelbert/jmbde-python/
-site_description: JM BDE - Management of the inventory the computer equipment
+site_url: https://jmuelbert.github.io/jmbde-python/ # Fixed URL format
+site_description: JM BDE - Management of inventory and computer equipment
 site_author: Jürgen Mülbert
 repo_name: jmuelbert/jmbde-python
-repo_url: https://github.com/jmuelbert/jmbde-python/
-edit_uri: blob/main/docs/
-copyright: Copyright &copy; Jürgen Mülbert 2023 - present
+repo_url: https://github.com/jmuelbert/jmbde-python
+edit_uri: edit/main/docs/ # Changed to edit instead of blob
+copyright: Copyright &copy; 2023-2024 Jürgen Mülbert
 
 docs_dir: docs
 site_dir: site
@@ -24,19 +27,19 @@ theme:
   favicon: assets/images/logo.svg
   font:
     text: Roboto
-    code: Roboto Mono
+    code: Fira Code # Changed to Fira Code for better code readability
   icon:
-    repo: fontawesome/brands/github-alt
+    repo: fontawesome/brands/github
     logo: material/check-network-outline
   palette:
-    - media: '(prefers-color-scheme: dark)'
+    - media: "(prefers-color-scheme: dark)"
       scheme: slate
       primary: indigo
       accent: indigo
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
-    - media: '(prefers-color-scheme: light)'
+    - media: "(prefers-color-scheme: light)"
       scheme: default
       primary: indigo
       accent: indigo
@@ -44,11 +47,12 @@ theme:
         icon: material/brightness-7
         name: Switch to dark mode
   features:
+    - announce.dismiss
     - content.action.edit
+    - content.code.annotate
     - content.code.copy
     - content.tabs.link
     - content.tooltips
-    - content.prettify
     - navigation.expand
     - navigation.footer
     - navigation.instant
@@ -58,178 +62,52 @@ theme:
     - navigation.top
     - navigation.tracking
     - search.highlight
+    - search.share
     - search.suggest
     - toc.follow
 
-nav:
-  - Introduction: index.md
-  - Getting Started:
-      - QuickStart: quickstart.md
-      - Installation: guides/install.md
-      - Configuration: guides/configuration.md
-  - User Guide:
-      - Command Line: guides/commandline.md
-      - Logging: guides/logging.md
-      - Troubleshooting: guides/troubleshooting.md
-  - Development:
-      - API Overview: developer/overview.md
-      - Configuration: developer/configuration.md
-      - Changelog: developer/changelog.md
-  - Community:
-      - Contributing: community/contributing.md
-      - Code of Conduct: community/code_of_conduct.md
-  - About:
-      - License: about/EUPL-1.2.md
-
-watch:
-  - mkdocs.yml
-  - src/
-  - docs/
-
 plugins:
-  # Enable for bug reports
-  # info: {}
-  # Built-in
-  search: {}
-  # Extra
-  glightbox: {}
-  minify:
-    minify_html: true
-  mike:
-    alias_type: copy
-  mkdocstrings:
-    default_handler: python
-    handlers:
-      python:
-        paths: [src]
-        options:
-          # Headings
-          show_root_heading: true
-          show_root_full_path: false
-          # Docstrings
-          show_if_no_docstring: true
-          # Signatures/annotations
-          show_signature_annotations: true
-          # Other
-          show_bases: false
-
-  i18n:
-    docs_structure: suffix
-    fallback_to_default: true
-    reconfigure_material: true
-    reconfigure_search: true
-    languages:
-      - locale: en
-        default: true
-        name: English
-        build: true
-        site_name: JM BDE Documentation (english)
-      - locale: de
-        name: Deutsch
-        build: true
-        site_name: Jm BDE Dokumentation (deutsch)
-        theme:
-          palette: red
-        nav_translations:
-          Introduction: Einführung
-  mermaid2: {}
-  git-revision-date-localized:
-    type: date
-    strict: false
-    enable_creation_date: true
-    timezone: Europe/Berlin
-    # Required for blog plugin's generated indices
-    fallback_to_build_date: true
-    exclude:
-      - blog/**/*
-
-markdown_extensions:
-  # Built-in
-  - markdown.extensions.abbr:
-  - markdown.extensions.admonition:
-  - markdown.extensions.attr_list:
-  - markdown.extensions.footnotes:
-  - markdown.extensions.md_in_html:
-  - markdown.extensions.meta:
-  - markdown.extensions.tables:
-  - markdown.extensions.toc:
-      permalink: true
-  # Extra
-  - mkdocs-click:
-  - mdx_truly_sane_lists:
-  - pymdownx.betterem:
-      smart_enable: all
-  - pymdownx.caret:
-  - pymdownx.critic:
-  - pymdownx.details:
-  - pymdownx.emoji:
-      # https://github.com/twitter/twemoji
-      # https://raw.githubusercontent.com/facelessuser/pymdown-extensions/master/pymdownx/twemoji_db.py
-      emoji_index: !!python/name:material.extensions.emoji.twemoji
-      emoji_generator: !!python/name:material.extensions.emoji.to_svg
-  - pymdownx.highlight:
-      guess_lang: false
-      linenums_style: pymdownx-inline
-      use_pygments: true
-  - pymdownx.inlinehilite:
-  - pymdownx.keys:
-  - pymdownx.magiclink:
-      repo_url_shortener: true
-      repo_url_shorthand: true
-      social_url_shortener: true
-      social_url_shorthand: true
-      normalize_issue_symbols: true
-      provider: github
-      user: jmuelbert
-      repo: jmbde-python
-  - pymdownx.mark:
-  - pymdownx.progressbar:
-  - pymdownx.saneheaders:
-  - pymdownx.smartsymbols:
-  - pymdownx.snippets:
-      check_paths: true
-      base_path:
-        - docs/.snippets
-      auto_append:
-        - links.txt
-        - abbrs.txt
-  - pymdownx.superfences:
-      # make exceptions to highlighting of code:
-      custom_fences:
-        - name: mermaid
-          class: mermaid
-          format: !!python/name:mermaid2.fence_mermaid_custom
-  - pymdownx.tabbed:
-      alternate_style: true
-      slugify: !!python/object/apply:pymdownx.slugs.slugify
-        kwds:
-          case: lower
-  - pymdownx.tasklist:
-      custom_checkbox: true
-  - pymdownx.tilde:
-
-extra:
-  version:
-    provider: mike
-    default: latest
-  social:
-    - icon: fontawesome/brands/github-alt
-      link: https://github.com/jmuelbert
-    - icon: fontawesome/regular/circle-question
-      link: https://github.com/jmuelbert/jmbde-python/issues
-      title: Need help ? Post an issue :)
-    - icon: fontawesome/brands/github
-      link: https://github.com/jmuelbert/jmbde-python
-    - icon: fontawesome/brands/linkedin
-      link: https://www.linkedin.com/in/juergenmuelbert
-  generator: false
-  alternate:
-    - name: English
-      link: /en/
-      lang: en
-    - name: Deutsch
-      link: /de/
-      lang: de
-extra_css:
-  - assets/css/custom.css
-  - https://cdn.jsdelivr.net/npm/firacode@6.2.0/distr/fira_code.css
+  - search:
+    separator: '[\\s\\-,:!=\\[\\]()"/]+|(?!=[^=])'
+  - glightbox:
+  - minify:
+      - minify_html: true
+      - minify_js: true
+      - minify_css: true
+  - mike:
+      - alias_type: copy
+      - canonical_version: latest
+  - mkdocstrings:
+      - default_handler: python
+      - handlers:
+          - python:
+              - paths: [src]
+      - options:
+          - show_root_heading: true
+          - show_root_full_path: false
+          - show_if_no_docstring: true
+          - show_signature_annotations: true
+          - show_bases: false
+          - docstring_style: google
+          - docstring_section_style: table
+  - i18n:
+      - docs_structure: suffix
+      - fallback_to_default: true
+      - reconfigure_material: true
+      - reconfigure_search: true
+      - languages:
+          - locale: en
+            default: true
+            name: English
+            build: true
+            site_name: JM BDE Documentation
+          - locale: de
+            name: Deutsch
+            build: true
+            site_name: JM BDE Dokumentation
+  - mermaid2:
+  - git-revision-date-localized:
+      - type: datetime
+      - timezone: Europe/Berlin
+      - enable_creation_date: true
+      - fallback_to_build_date: true
