--- a/.github/workflows/add-issue-header.yml
+++ b/.github/workflows/add-issue-header.yml
@@ -1,15 +1,14 @@
 ---
-  # SPDX-FileCopyrightText: GitHub, Inc. and contributors
-  # SPDX-License-Identifier: MIT
+# SPDX-FileCopyrightText: GitHub, Inc. and contributors
+# SPDX-License-Identifier: MIT
 
   name: Issue Header Automation
 
-  on:
+  on: # yamllint disable-line rule:truthy
     issues:
       types: [opened, labeled]
 
   permissions:
-    issues: write # Needed for updating issues and adding reactions.
     contents: read
 
   concurrency:
@@ -22,6 +21,8 @@
       if: "!contains(join(github.event.issue.labels.*.name, ','), 'invalid')" # Ignore invalid issues
       runs-on: ubuntu-latest
       timeout-minutes: 5
+      permissions:
+        issues: write # Needed for updating issues and adding reactions.
 
       steps:
         - name: 🔒 Harden Runner
@@ -162,7 +163,7 @@
 
         - name: ⏱️ Add Processing Time
           if: success()
-          uses: actions/github-script@v7.0.1
+          uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
           with:
             script: |
               const processingTime = Date.now() - new Date(context.payload.issue.created_at).getTime();
