--- a/.github/workflows/mkdocs-pages.yml
+++ b/.github/workflows/mkdocs-pages.yml
@@ -10,7 +10,6 @@ on: # yamllint disable-line rule:truthy
       - main
       - develop
       - release/**
-      - resolve-**
     paths:
       - docs/**
       - mkdocs.yml
@@ -84,10 +83,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-docs-
 
-      - name: 🛠️ Install Build Tools
+      - name: 🛠️ Install Dependencies
         run: |
-          python -m pip install --upgrade pip wheel
-          pip install hatch uv
+          python -m pip install --upgrade pip
+          pip install --require-hashes -r .github/workflows/requirements.txt
+          pre-commit install-hooks
 
       - name: 🔧 Install Documentation Dependencies
         run: hatch env create docs
