--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -97,7 +97,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
             sudo apt-get update
-            sudo apt-get install -y libegl-mesa0
+            sudo apt-get install -y libegl1
 
       - name: 🧪 Run Tests
         run: hatch run test:cov
